.k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticking-web
spec:
  type: ClusterIP
  selector:
    component: ticking-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
