.k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticking-web
  labels:
    name: ticking-web
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-dev
    nginx.ingress.kubernetes.io/proxy-body-size: '10m'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-buffer-size: 32k
spec:
  tls:
    - hosts:
        - ticking.baas-dev.buywheelz.com
      secretName: web-tls
  rules:
    - host: ticking.baas-dev.buywheelz.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: ticking-web
                port:
                  number: 3000
